tests/invalid/runtime/index_set_list_oob.pts
import Io;

function main() : void {
    list<string> values = ["a"];
    values[5] = "x";
    Io.printLine("never");
}
